--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -12,7 +12,20 @@
   </head>
   <body>
     {% block content %}
-    
+        <h2>Blog Posts</h2>
+        {% for post in posts %}
+        <div class="row">
+            <div class="col">
+                <h3>{{ post.title }}</h3>
+                <small>By {{ post.author }} on {{ post.published_at|date:"M, d Y" }}</small>
+                <p>{{ post.summary }}</p>
+                <p>
+                    ({{ post.content|wordcount }} words)
+                    <a href="#">Read More</a>
+                </p>
+            </div>
+        </div>
+        {% endfor %}
     {% endblock %}
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
