--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,23 +1,12 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    {% block content %}
-        <h2>Blog Posts</h2>
+{% extends "base.html" %}
+{% load blog_extras %}
+{% block content %}
+    <h2>Blog Posts</h2>
         {% for post in posts %}
         <div class="row">
             <div class="col">
                 <h3>{{ post.title }}</h3>
-                <small>By {{ post.author }} on {{ post.published_at|date:"M, d Y" }}</small>
+                <small>By {{ post.author|author_details }} on {{ post.published_at|date:"M, d Y" }}</small>
                 <p>{{ post.summary }}</p>
                 <p>
                     ({{ post.content|wordcount }} words)
@@ -26,9 +15,4 @@
             </div>
         </div>
         {% endfor %}
-    {% endblock %}
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+{% endblock %}
