--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
+{% load blog_extras %}
 {% block content %}
 <h2>{{ post.title }}</h2>
-<div class="row">
-    <div class="col">
+{% row %}
+    {% col %}
         {% include "blog/post-byline.html" %}
-    </div>
-</div>
-<div class="row">
+    {% endcol %}
+{% endrow %}
+{% row %}
     <div class="col">
         {{ post.content|safe }}
     </div>
-</div>
+{% endrow %}
+{% row %}
+    {% col %}
+        {% recent_posts post %}
+    {% endcol %}
+{% endrow %}
 {% endblock %}
